# shadowproxy

./: .directory  local.properties
app/: .directory  CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/android/shadowproxy/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: core.cpp
app/src/main/cpp/ev_server/: ev_server.cpp  ev_server.h
app/src/main/cpp/hdr_utils/: inet_ip4.cpp  inet_ip4.h  inet_tcp.cpp  inet_tcp.h  inet_udp.cpp  inet_udp.h
app/src/main/cpp/tcp/: cproxy.cpp  cproxy.h  raw_tun.cpp  raw_tun.h  shadowsocks.cpp  shadowsocks.h  tcp_base.cpp  tcp_base.h
app/src/main/cpp/thread/: pthread_pool.cpp  pthread_pool.h
app/src/main/cpp/tunnel/: tunnel.cpp  tunnel.h
app/src/main/cpp/udp/: udp_ontcp.cpp  udp_ontcp.h  udp_relayer.cpp  udp_relayer.h
app/src/main/cpp/utils/: conf.cpp  conf.h  global.cpp  global.h  nat_mgr.cpp  nat_mgr.h  nat_session.h  utils.cpp  utils.h
app/src/main/java/android/shadowproxy/: App.java  ConfigExample.java  ConfigManagerActivity.java  EditActivity.java  LogTools.java  MainActivity.java  (+3 more)
app/src/main/res/drawable/: button.xml  selector.xml  tv.xml
app/src/main/res/drawable-v21/: button.xml  selector.xml  tv.xml
app/src/main/res/layout/: activity_configmanager.xml  activity_edit.xml  activity_main.xml  activity_settings.xml  item_config.xml
app/src/main/res/menu/: edit.xml  main.xml  manager.xml
app/src/main/res/values/: colors.xml  routes.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/main/res/xml/: activity_settings.xml
(+6 files in other folders)
